ros2_ws/src/log/build_2025-10-09_13-19-56/ten_pub/stdout_stderr.log
running egg_info
creating ../build/ten_pub/ten_pub.egg-info
writing ../build/ten_pub/ten_pub.egg-info/PKG-INFO
writing dependency_links to ../build/ten_pub/ten_pub.egg-info/dependency_links.txt
writing entry points to ../build/ten_pub/ten_pub.egg-info/entry_points.txt
writing requirements to ../build/ten_pub/ten_pub.egg-info/requires.txt
writing top-level names to ../build/ten_pub/ten_pub.egg-info/top_level.txt
writing manifest file '../build/ten_pub/ten_pub.egg-info/SOURCES.txt'
reading manifest file '../build/ten_pub/ten_pub.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../build/ten_pub/ten_pub.egg-info/SOURCES.txt'
running build
running build_py
creating /home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/build
creating /home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/build/lib
creating /home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/build/lib/ten_pub
copying ten_pub/__init__.py -> /home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/build/lib/ten_pub
copying ten_pub/publisher_member_function.py -> /home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/build/lib/ten_pub
running install
running install_lib
creating /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub
copying /home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/build/lib/ten_pub/__init__.py -> /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub
copying /home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/build/lib/ten_pub/publisher_member_function.py -> /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub
byte-compiling /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub/publisher_member_function.py to publisher_member_function.cpython-310.pyc
running install_data
  File "/home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub/publisher_member_function.py", line 32
    msg.linear.x = = 1 
                   ^
SyntaxError: invalid syntax

creating /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/share/ament_index
creating /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/share/ament_index/resource_index
creating /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/share/ament_index/resource_index/packages
copying resource/ten_pub -> /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/share/ament_index/resource_index/packages
copying package.xml -> /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/share/ten_pub
running install_egg_info
Copying ../build/ten_pub/ten_pub.egg-info to /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub-0.0.0-py3.10.egg-info
running install_scripts
Installing talker script to /home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/ten_pub
writing list of installed files to '/home/chelbaev/NSU/robots/ros2_ws/src/build/ten_pub/install.log'
